# claude-agent-sdk-rust-cerebras

./: Cargo.toml  README.md
examples/: agents.rs  hooks.rs  include_partial_messages.rs  mcp_calculator.rs  minimal_test.rs  quick_start.rs  setting_sources.rs  stderr_callback_example.rs  streaming_mode.rs  streaming_mode_ipython.rs  streaming_mode_trio.rs  system_prompt.rs  tool_permission_callback.rs
src/: client.rs  error.rs  lib.rs  message_parser.rs  query.rs  transport.rs  types.rs
src/internal/: client.rs  query.rs
tests/: client_tests.rs  error_tests.rs  integration_tests.rs  internal_query_tests.rs  message_parser_tests.rs  mod.rs  streaming_tests.rs  test_utils.rs  transport_tests.rs
