[package]
name = "claude-agent-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"